# Lawyer_Agent

./: .gitignore  ingest.py  lawyer_graph.py  main.py  pyproject.toml
chroma_db/673a1703-63bb-4aa5-9f14-b12179535bfd/: index_metadata.pickle
